error handling. correcting responsecodes.
