# apiDocs/swagger.yaml
@@ -32,8 +32,8 @@ paths:
                     required:
                       - message
                       - api_key
-        '404':
-          description: Not Found
+        '400':
+          description: Bad Request
         '500':
           description: Internal Server Error
   /question:
@@ -96,7 +96,7 @@ paths:
           description: OK
         '401':
           description: Unauthorized
-        '404':
-          description: Not Found
+        '400':
+          description: Bad Request
         '500':
           description: Internal Server Error
